# suiteeval

./: .gitignore  README.md  pyproject.toml  requirements-demo.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: style.yml  test.yml
demo/: biencoder_sweep.py  bm25_sweep.py  colbert_sweep.py  example.ipynb  walkthrough.ipynb
demo/pt_docs/: conf.py  suiteeval.reranking.bm25.rst  suiteeval.suite.beir.rst  suiteeval.suite.lotte.rst  suiteeval.utility.rst
pt_docs/: conf.py  make.bat  makefile  suiteeval.suite.base.rst  suiteeval.suite.rst
pt_docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  suiteeval.reranking.biencoder.html  suiteeval.reranking.html  suiteeval.reranking.splade.html  suiteeval.suite.base.html  suiteeval.suite.beir.html  suiteeval.suite.bright.html  suiteeval.suite.html  suiteeval.suite.lotte.html  suiteeval.suite.msmarco.html  suiteeval.utility.html
suiteeval/: __init__.py  _optional.py  context.py  utility.py
suiteeval/index/: __init__.py  base.py  flex.py  pisa.py  terrier.py
suiteeval/pipelines/: __init__.py  biencoder.py  splade.py
suiteeval/pt_docs/: index.rst
suiteeval/reranking/: __init__.py  biencoder.py  bm25.py  splade.py
suiteeval/suite/: __init__.py  base.py  beir.py  bright.py  lotte.py  msmarco.py  nanobeir.py
tests/: __init__.py  test_base.py  test_suiteeval.py
tests/integration/: test_base.py  test_beir.py  test_bright.py  test_context.py  test_indexing_dir.py  test_reranking.py  test_save_dir.py
tests/unit/: __init__.py  test_compute_overall_mean.py  test_save_index_dirs.py
(+53 files in other folders)
